# mtbinloader2

./: Cargo.toml  LICENSE  README.md  build.rs  sus.c
.github/workflows/: build.yml  release.yml
assets/: lightmapUtil_10023_11020.glsl  lightmapUtil_10023_13028.glsl  lightmapUtil_11020_13028.glsl
src/: aasset.rs  autofixer.rs  cpp_string.rs  hooking.rs  jniopts.rs  lib.rs  loader.rs  plthook.rs  string.cpp
