[package]
name = "mtbinloader2"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = { version = "0.14.1", default-features = false }


ctor = "0.2.8"
cxx = "1.0.128"
libc = "0.2.159"
lightningscanner = "1.0.2"
log = "0.4.22"
materialbin = { git = "https://github.com/mcbegamerxx954/materialbin", version = "0.1.1" }
ndk = "0.9.0"
ndk-sys = "0.6.0"
once_cell = "1.20.1"
page_size = "0.6.0"
plt-rs = "0.3.0"
procmaps = "0.4.1"
scroll = "0.12.0"


[target.'cfg(target_arch = "aarch64")'.dependencies]
clear-cache = "0.1.0"
[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.1.24"
